src/scss/components/icon.scss
/* -- Icons & Buttons -- */
.btn {
    justify-content: center;
    vertical-align: middle;
    text-decoration: none;
    display: inline-flex;
    word-break: initial;
    position: relative;
    align-items: center;
    user-select: none;
    cursor: pointer;
    line-height: 1;

    min-height: auto;
    width: auto;

    &,
    &-bkg,
    &-background {
       @include colorList(background-color);
    }

    &-default {
        padding: 8px 16px;
        margin: 8px;
    }

    &-radial {
        border-radius: 24px;
    }

    &-round {
        @extend .layer-round;
        padding: 16px;
    }

    &-spacer {
        margin-right: 8px;
    }

    &-strict {
        min-width: 48px;
        padding: 0 16px;
        height: 48px;
    }

    &-group {
        justify-content: inherit;
        align-items: inherit;
        display: inherit;
        width: 100%;

        .icon {
            display: inline-block;
            user-select: none;
            overflow: hidden;
            flex-shrink: 0;
        }
    }

    &-content {
        text-transform: uppercase;
        letter-spacing: 0.02857em;
        font-family: $bold-font;
        font-size: 0.875rem;
        font-weight: 500;
        line-height: 1;
    }
}

.icon, .material-icons {
   -webkit-font-feature-settings: "liga" off, "dlig"; /* Ch 16-26, BB 10, And 18.0 */
   -moz-font-feature-settings: "liga=0, dlig=1"; /* Fx 4-21 */
   font-feature-settings: "liga", "dlig"; /* IE 10, Saf 4.0-6.0 */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
   font-family: $icon-font;
   vertical-align: middle;
   letter-spacing: normal;
   display: inline-block;
   text-decoration: none;
   text-transform: none;
   white-space: nowrap;
   font-weight: normal;
   position: relative;
   font-style: normal;
   word-wrap: normal;
   line-height: 1;
   direction: ltr;
   height: 1em;
   width: 1em;

   &-btn, &-btn:hover {
      border-radius: 20em;
      text-decoration: none;
   }
}

